[tool.poetry]
name = "doodah"
version = "0.1.0"
description = "A Discord bot"
authors = ["barge"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "^21.8b0"
"discord" = "^1.7.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
